--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>examples</title>
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="format-detection" content="telphone=no, email=no"/>
 </head>
 <body>
     <div id="app"></div>
